--- a/_c8oProject/sequences/GetChildren.yaml
+++ b/_c8oProject/sequences/GetChildren.yaml
@@ -22,9 +22,9 @@
           ↓hasChildren [steps.XMLElementStep-1588585287606]: 
             nodeName: hasChildren
             nodeText: true
-          ↓className [steps.ElementStep-1588602905416]: 
-            expression: item.getClass().getName()
+          ↓className [steps.XMLElementStep-1588662704001]: 
             nodeName: className
+            nodeText: com.twinsoft.convertigo.beans.core.Project
     ↓jElse [steps.ElseStep-1588584571513]: 
       ↓jIterator [steps.SimpleIteratorStep-1588585452342]: 
         expression: com.twinsoft.convertigo.engine.Engine.theApp.databaseObjectsManager.getDatabaseObjectByQName(name).getDatabaseObjectChildren()
