--- a/_c8oProject/sequences/GetIcon.yaml
+++ b/_c8oProject/sequences/GetIcon.yaml
@@ -1,3 +1,5 @@
+clientCachable: true
+responseExpiryDate: absolute,3600
 ↓BuildBase64Icon [steps.SimpleStep-1588603866382]: 
   expression: |
     'var bi = com.twinsoft.convertigo.engine.util.CachedIntrospector.getBeanInfo(java.lang.Class.forName(className));
