--- a/_c8oProject/sequences/MoveDatabaseObject.yaml
+++ b/_c8oProject/sequences/MoveDatabaseObject.yaml
@@ -28,6 +28,9 @@
 ↓qname [steps.ElementStep-1588770968876]: 
   expression: qname
   nodeName: qname
+↓displayName [steps.ElementStep-1596112904017]: 
+  expression: dboFrom.getName()
+  nodeName: displayName
 ↓from [variables.RequestableVariable-1588752878536]: 
 ↓to [variables.RequestableVariable-1588752893748]: 
 ↓before [variables.RequestableVariable-1588752914053]: 
